Fixed a bug where the admin edit icon for clan wars would be visible for all the rows on hover. Changed link to clan war detail to be on the date instead of the opponent name.

--- a/sc2clanman/static/css/main.purified.css
+++ b/sc2clanman/static/css/main.purified.css
@@ -3755,7 +3755,7 @@ body {
 #clanwar-table .admin-view {
   visibility: hidden;
 }
-#clanwar-table:hover .admin-view {
+#clanwar-table tr:hover .admin-view {
   visibility: visible;
 }
 .tooltip .tooltip-inner a {
