--- a/src/less/clanwars.less
+++ b/src/less/clanwars.less
@@ -21,7 +21,7 @@
     .admin-view {
         visibility: hidden;
     }
-    &:hover .admin-view {
+    & tr:hover .admin-view {
         visibility: visible;
     }
 }
